Fix .filter-option width
The width of .filter-option when the text is too long was set
with Javascript. Not only is this a little messy, it didn't work
properly if the select originally was hidden. Everything is now set with
CSS, so no more issues.

--- a/bootstrap-select.css
+++ b/bootstrap-select.css
@@ -17,14 +17,17 @@
 }
 .bootstrap-select .btn {
 	width: 220px;
-	padding-right:25px;
 }
 .bootstrap-select.btn-group .btn .filter-option {
-	white-space:nowrap;
-	overflow:hidden;
-	width:100%;
-	text-align:left; 
-	margin-right:5px;
+	overflow:hidden; 
+	position:absolute;
+	left:12px; 
+	right:25px;
+	text-align:left;
+}
+.bootstrap-select.btn-group .btn .caret {
+	position:absolute;
+	right:12px;
 }
 .bootstrap-select.btn-group .disabled {
 	cursor: not-allowed;
